--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   "keywords": [
     "jquery",
     "plugin",
-    "jquery-plugin",
+    "jquery-plugin"
   ],
   "main": "src/jquery.fontcide.js",
   "dependencies": {
